--- a/trunk/jsidplay2/src/main/resources/ui/sidreg/SidReg.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/sidreg/SidReg.fxml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Scene?>
+<?import java.net.URL?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.collections.FXCollections?> 
 <?import javafx.scene.control.ToggleButton?>
-<?import java.net.URL?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <?import ui.sidreg.SidRegWrite?>
 <?scenebuilder-preview-i18n-resource SidReg.properties?>
 
-<Scene xmlns:fx="http://javafx.com/fxml">
+<AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<stylesheets>
 		<URL value="@SidReg.css" />
 	</stylesheets>
-	<VBox fx:id="vbox">
+	<VBox AnchorPane.bottomAnchor="10"
+		AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"
+		AnchorPane.topAnchor="10" fx:id="vbox">
 		<ToggleButton text="%START_STOP_RECORDING" fx:id="startStop"
 			onAction="#doStartStop">
 			<tooltip>
@@ -145,4 +146,4 @@
 			</columns>
 		</TableView>
 	</VBox>
-</Scene>
+</AnchorPane>
