--- a/trunk/jsidplay2/src/main/resources/ui/webview/WebView.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/webview/WebView.fxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.web.WebEngine?>
 <?import javafx.scene.web.WebView?>
+<?import javafx.scene.control.Button?>
 <?scenebuilder-preview-i18n-resource WebView.properties?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
-	<WebView AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10"
-		AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10" fx:id="webView" />
+	<VBox AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10"
+		AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
+		<HBox alignment="CENTER_LEFT">
+			<Button text="%BACKWARD" onAction="#backward" />
+			<Button text="%RELOAD" onAction="#reload" />
+			<Button text="%FORWARD" onAction="#forward" />
+		</HBox>
+		<WebView fx:id="webView" />
+	</VBox>
 </AnchorPane>
