--- a/trunk/jsidplay2/src/main/resources/ui/favorites/Favorites.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/favorites/Favorites.fxml
@@ -25,75 +25,70 @@
 		<ToggleGroup fx:id="repeatGroup" />
 	</fx:define>
 	<BorderPane AnchorPane.bottomAnchor="10"
-		AnchorPane.leftAnchor="10"
-		AnchorPane.topAnchor="10">
-		<top>
-			<VBox>
-				<HBox alignment="CENTER">
-					<Button text="%ADD" fx:id="add" onAction="#addFavorites">
-						<graphic>
-							<ImageView>
-								<image>
-									<Image url="@/ui/icons/add.png" />
-								</image>
-							</ImageView>
-						</graphic>
-					</Button>
-					<Button text="%REMOVE" fx:id="remove" onAction="#removeFavorites">
-						<graphic>
-							<ImageView>
-								<image>
-									<Image url="@/ui/icons/remove.png" />
-								</image>
-							</ImageView>
-						</graphic>
-					</Button>
-					<Button text="%SELECT_ALL" fx:id="selectAll" onAction="#selectAllFavorites">
-						<graphic>
-							<ImageView>
-								<image>
-									<Image url="@/ui/icons/selectall.png" />
-								</image>
-							</ImageView>
-						</graphic>
-					</Button>
-					<Button text="%DESELECT_ALL" fx:id="deselectAll" onAction="#clearSelection">
-						<graphic>
-							<ImageView>
-								<image>
-									<Image url="@/ui/icons/deselectall.png" />
-								</image>
-							</ImageView>
-						</graphic>
-					</Button>
-				</HBox>
-				<HBox alignment="CENTER">
-					<Button text="%LOAD" fx:id="load" onAction="#loadFavorites">
-						<graphic>
-							<ImageView>
-								<image>
-									<Image url="@/ui/icons/load.png" />
-								</image>
-							</ImageView>
-						</graphic>
-
-					</Button>
-					<Button text="%SAVEAS" fx:id="saveAs" onAction="#saveFavoritesAs">
-						<graphic>
-							<ImageView>
-								<image>
-									<Image url="@/ui/icons/save.png" />
-								</image>
-							</ImageView>
-						</graphic>
-					</Button>
-				</HBox>
-			</VBox>
-		</top>
+		AnchorPane.leftAnchor="10" AnchorPane.topAnchor="10">
 		<center>
 			<TitledPane text="%PLAYLISTS" BorderPane.alignment="TOP_LEFT"
 				collapsible="false">
 				<VBox>
+					<HBox alignment="CENTER">
+						<Button text="%ADD" fx:id="add" onAction="#addFavorites">
+							<graphic>
+								<ImageView>
+									<image>
+										<Image url="@/ui/icons/add.png" />
+									</image>
+								</ImageView>
+							</graphic>
+						</Button>
+						<Button text="%REMOVE" fx:id="remove" onAction="#removeFavorites">
+							<graphic>
+								<ImageView>
+									<image>
+										<Image url="@/ui/icons/remove.png" />
+									</image>
+								</ImageView>
+							</graphic>
+						</Button>
+						<Button text="%SELECT_ALL" fx:id="selectAll" onAction="#selectAllFavorites">
+							<graphic>
+								<ImageView>
+									<image>
+										<Image url="@/ui/icons/selectall.png" />
+									</image>
+								</ImageView>
+							</graphic>
+						</Button>
+						<Button text="%DESELECT_ALL" fx:id="deselectAll" onAction="#clearSelection">
+							<graphic>
+								<ImageView>
+									<image>
+										<Image url="@/ui/icons/deselectall.png" />
+									</image>
+								</ImageView>
+							</graphic>
+						</Button>
+						<Button text="%LOAD" fx:id="load" onAction="#loadFavorites">
+							<graphic>
+								<ImageView>
+									<image>
+										<Image url="@/ui/icons/load.png" />
+									</image>
+								</ImageView>
+							</graphic>
+
+						</Button>
+						<Button text="%SAVEAS" fx:id="saveAs" onAction="#saveFavoritesAs">
+							<graphic>
+								<ImageView>
+									<image>
+										<Image url="@/ui/icons/save.png" />
+									</image>
+								</ImageView>
+							</graphic>
+						</Button>
+						<Label text="%RENAME_TAB" />
+						<TextField fx:id="renameTab" onAction="#renameTab"  prefWidth="100"/>
+					</HBox>
 					<HBox spacing="5">
 						<Button onAction="#addTab" prefWidth="20" prefHeight="20">
 							<tooltip>
@@ -107,50 +102,33 @@
 								</ImageView>
 							</graphic>
 						</Button>
-						<Label text="%RENAME_TAB" />
-						<TextField fx:id="renameTab" onAction="#renameTab" />
 					</HBox>
-					<TabPane fx:id="favoritesList" tabClosingPolicy="ALL_TABS"/>
+					<TabPane fx:id="favoritesList" tabClosingPolicy="ALL_TABS" />
 				</VBox>
 			</TitledPane>
 		</center>
 		<bottom>
-			<TitledPane text="%PLAYBACK_OPTIONS" collapsible="false">
+			<TitledPane text="%PLAYBACK_OPTIONS" collapsible="true"
+				expanded="false">
 				<GridPane>
-					<CheckBox text="%RESPECT_SONG_LENGTH"
-						GridPane.columnIndex="0" GridPane.rowIndex="0" fx:id="enableSldb"
-						onAction="#doEnableSldb">
-					</CheckBox>
-					<CheckBox text="%SINGLE_SONG" GridPane.columnIndex="1"
-						GridPane.rowIndex="0" fx:id="singleSong" onAction="#playSingleSong">
-					</CheckBox>
-					<Label text="%DEFAULT_LENGTH" GridPane.columnIndex="2"
-						GridPane.rowIndex="0" GridPane.halignment="RIGHT">
-					</Label>
-					<TextField GridPane.columnIndex="3" GridPane.rowIndex="0"
-						fx:id="defaultTime" onAction="#setDefaultTime">
-						<tooltip>
-							<Tooltip text="%DEFAULT_LENGTH_TIP"></Tooltip>
-						</tooltip>
-					</TextField>
 					<RadioButton text="%OFF" selected="true" toggleGroup="$playbackGroup"
-						fx:id="off" GridPane.rowIndex="1" GridPane.columnIndex="0"
+						fx:id="off" GridPane.rowIndex="0" GridPane.columnIndex="0"
 						onAction="#off" />
 					<RadioButton text="%NORMAL" toggleGroup="$playbackGroup"
-						fx:id="normal" GridPane.rowIndex="1" GridPane.columnIndex="1"
+						fx:id="normal" GridPane.rowIndex="0" GridPane.columnIndex="1"
 						onAction="#normal" />
 					<RadioButton text="%RANDOM_ONE_PLAYLIST" toggleGroup="$playbackGroup"
-						fx:id="randomOne" GridPane.rowIndex="1" GridPane.columnIndex="2"
+						fx:id="randomOne" GridPane.rowIndex="0" GridPane.columnIndex="2"
 						onAction="#randomOne" />
 					<RadioButton text="%RANDOM_ALL_PLAYLISTS" toggleGroup="$playbackGroup"
-						fx:id="randomAll" GridPane.rowIndex="1" GridPane.columnIndex="3"
+						fx:id="randomAll" GridPane.rowIndex="0" GridPane.columnIndex="3"
 						onAction="#randomAll" />
 
 					<RadioButton text="%REPEAT_OFF" selected="true"
-						toggleGroup="$repeatGroup" fx:id="repeatOff" GridPane.rowIndex="2"
+						toggleGroup="$repeatGroup" fx:id="repeatOff" GridPane.rowIndex="1"
 						GridPane.columnIndex="0" onAction="#repeatOff" />
 					<RadioButton text="%REPEAT_ONE_TUNE" toggleGroup="$repeatGroup"
-						fx:id="repeatOne" GridPane.rowIndex="2" GridPane.columnIndex="1"
+						fx:id="repeatOne" GridPane.rowIndex="1" GridPane.columnIndex="1"
 						onAction="#repeatOne" />
 				</GridPane>
 			</TitledPane>
