--- a/jsidplay2/src/main/resources/ui/oscilloscope/Oscilloscope.fxml
+++ b/jsidplay2/src/main/resources/ui/oscilloscope/Oscilloscope.fxml
@@ -15,36 +15,30 @@
 <?import ui.oscilloscope.VolumeGauge?>
 <?import ui.oscilloscope.WaveGauge?>
 <?scenebuilder-preview-i18n-resource Oscilloscope.properties?>
+<?import javafx.scene.control.Separator?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<VBox AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10"
 		AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
-		<HBox>
-			<TitledPane text="%VOICE_CONTROL" collapsible="false"
-				HBox.hgrow="ALWAYS">
-				<GridPane>
-					<Label text="%MONO_SID_" GridPane.columnIndex="0"
-						GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
-					<CheckBox fx:id="muteVoice1" onAction="#doMuteVoice1"
-						text="%MUTE_VOICE_1" GridPane.columnIndex="1" GridPane.rowIndex="0"
-						GridPane.hgrow="ALWAYS" />
-					<CheckBox fx:id="muteVoice2" onAction="#doMuteVoice2"
-						text="%MUTE_VOICE_2" GridPane.columnIndex="2" GridPane.rowIndex="0"
-						GridPane.hgrow="ALWAYS" />
-					<CheckBox fx:id="muteVoice3" onAction="#doMuteVoice3"
-						text="%MUTE_VOICE_3" GridPane.columnIndex="3" GridPane.rowIndex="0"
-						GridPane.hgrow="ALWAYS" />
-					<Label text="%STEREO_SID_" GridPane.columnIndex="0"
-						GridPane.rowIndex="1" />
-					<CheckBox fx:id="muteVoice4" onAction="#doMuteVoice4"
-						text="%MUTE_VOICE_1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-					<CheckBox fx:id="muteVoice5" onAction="#doMuteVoice5"
-						text="%MUTE_VOICE_2" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-					<CheckBox fx:id="muteVoice6" onAction="#doMuteVoice6"
-						text="%MUTE_VOICE_3" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-				</GridPane>
-			</TitledPane>
-		</HBox>
+		<GridPane>
+			<Label text="%MONO_SID_" GridPane.columnIndex="0"
+				GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
+			<CheckBox fx:id="muteVoice1" onAction="#doMuteVoice1" text="%MUTE_VOICE_1"
+				GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
+			<CheckBox fx:id="muteVoice2" onAction="#doMuteVoice2" text="%MUTE_VOICE_2"
+				GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
+			<CheckBox fx:id="muteVoice3" onAction="#doMuteVoice3" text="%MUTE_VOICE_3"
+				GridPane.columnIndex="3" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
+			<Label text="%STEREO_SID_" GridPane.columnIndex="0"
+				GridPane.rowIndex="1" />
+			<CheckBox fx:id="muteVoice4" onAction="#doMuteVoice4" text="%MUTE_VOICE_1"
+				GridPane.columnIndex="1" GridPane.rowIndex="1" />
+			<CheckBox fx:id="muteVoice5" onAction="#doMuteVoice5" text="%MUTE_VOICE_2"
+				GridPane.columnIndex="2" GridPane.rowIndex="1" />
+			<CheckBox fx:id="muteVoice6" onAction="#doMuteVoice6" text="%MUTE_VOICE_3"
+				GridPane.columnIndex="3" GridPane.rowIndex="1" />
+		</GridPane>
+		<Separator orientation="HORIZONTAL" />
 		<HBox>
 			<TitledPane text="%MONO_SID" collapsible="false">
 				<GridPane>
@@ -74,7 +68,7 @@
 						GridPane.columnIndex="2" GridPane.rowIndex="3" />
 				</GridPane>
 			</TitledPane>
-			<HBox HBox.hgrow="ALWAYS"/>
+			<HBox HBox.hgrow="ALWAYS" />
 			<TitledPane text="%STEREO_SID" collapsible="false">
 				<GridPane>
 					<WaveGauge fx:id="waveStereo_0" text="%WAVE"
