--- a/jsidplay2/src/main/resources/ui/proxysettings/ProxySettings.fxml
+++ b/jsidplay2/src/main/resources/ui/proxysettings/ProxySettings.fxml
@@ -20,7 +20,7 @@
 <?import javafx.collections.FXCollections?> 
 <?import java.lang.String?>
 <?import java.lang.Integer?>
-<?import resid_builder.resid.SamplingMethod?>
+<?import libsidplay.common.SamplingMethod?>
 <?scenebuilder-preview-i18n-resource ProxySettings.properties?>
 
 <Scene xmlns:fx="http://javafx.com/fxml">
